<resources>
    <string name="app_name">DrawingTool</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>


    <string name="drawing">Drawing!</string>
    <string name="action_settings">Settings</string>


    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <string name="gallery">Gallery</string>
    <string name="effect">Effect</string>
    <string name="cube">Cube</string>

</resources>
