<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@drawable/sea"
    android:orientation="vertical"

    tools:context=".MainActivity">


<LinearLayout

    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:id="@+id/linearLayout"
    android:orientation="horizontal"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true">

    <ImageButton
        android:id="@+id/draw_btn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/brush"
        android:src="@drawable/brush"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:adjustViewBounds="false" />
    <ImageButton
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save"
        android:src="@drawable/save"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:scaleType="centerInside"/>

    <ImageButton
        android:id="@+id/new_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_new"
        android:src="@drawable/new_pic"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:scaleType="centerInside"/>

    <ImageButton
        android:id="@+id/erase_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/erase"
        android:src="@drawable/eraser"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:scaleType="centerInside"/>

    <ImageButton
        android:id="@+id/btn_select_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gallery"
        android:src="@drawable/gallery"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="2sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="0sp"
        android:scaleType="centerInside"
        />

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/linearLayout">


        <org.androidtown.drawingtool.DrawingView
            android:id="@+id/drawing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:background="#FFFFFFFF"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <ImageButton
            android:id="@+id/effect_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:contentDescription="@string/effect"
            android:src="@drawable/effect"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            />

        <ImageButton
            android:id="@+id/highlighter_brush"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:src="@drawable/highlighter"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            />

        <ImageButton
            android:id="@+id/blur_brush"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/blur"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            />





        <ImageButton
            android:id="@+id/cube_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:contentDescription="@string/cube"
            android:src="@drawable/cube"
            android:scaleType="centerInside"
            android:layout_gravity="center_vertical"
            />
</LinearLayout>
</RelativeLayout>



