<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_gravity="center"
    >

<LinearLayout
    android:layout_width="159dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <ImageButton
        android:id="@+id/small_brush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/sml"
        android:src="@drawable/small" />

    <ImageButton
        android:id="@+id/medium_brush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/med"
        android:src="@drawable/medium" />

    <ImageButton
        android:id="@+id/large_brush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/lrg"
        android:src="@drawable/large" />
</LinearLayout>


    <LinearLayout
        android:id="@+id/paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_gravity="center"
        android:orientation="horizontal">


            <ImageButton
                android:id="@+id/paint_brown"
                android:layout_width="34dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FFA52A2A"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FFA52A2A"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/paint_red"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FFFF0000"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/paint_orange"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FFFFA500"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FFFFA500"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/paint_yellow"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF00"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FFFFFF00"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/paint_green"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FFADFF2F"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FFADFF2F"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/paint_teal"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FF008080"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FF008080"
                android:layout_gravity="center" />
        </LinearLayout>
        <!-- Bottom Row -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/paint_dodgerBlue"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FF1E90FF"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FF1E90FF"
                android:layout_gravity="center"
                />

            <ImageButton
                android:id="@+id/paint_mediumPurple"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FF9932CC"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FF9932CC"
                android:layout_gravity="center"
                 />

            <ImageButton
                android:id="@+id/paint_pink"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FFFFC0CB"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FFFFC0CB"
                android:layout_gravity="center"
                 />

            <ImageButton
                android:id="@+id/paint_white"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FFFFFFFF"
                android:layout_gravity="center"
                 />

            <ImageButton
                android:id="@+id/paint_darkGray"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FFA9A9A9"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FFA9A9A9"
                android:layout_gravity="center"
                 />

            <ImageButton
                android:id="@+id/paint_black"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_margin="2dp"
                android:background="#FF000000"
                android:contentDescription="@string/paint"

                android:src="@drawable/paint"
                android:tag="#FF000000"
                android:layout_gravity="center"
                 />
        </LinearLayout>

</LinearLayout>